<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_ui"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait" >

    <TextView
        android:id="@+id/values"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button_ready"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/my_shape"
        android:text="@string/button_ready"
        android:textColor="#FF8C00"
        android:textSize="38sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="bottom" >

        <Button
            android:id="@+id/tutorial_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tutorial" />

        <Button
            android:id="@+id/ranking_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ranking" />
    </LinearLayout>

</FrameLayout>